# parallel-and-distributed-computations

./: CMakeLists.txt  README.md
cuda_classes/: array.cu  cudaerr.h  linear.cu  texture.cu
hw1/: main.cpp
hw2/: hw2.cpp
lab1/: main.cu
lab2/: image_process.py  main.cu
lab3/: main.cu  pixel.cu
